# OPPLabsNSU

./: .gitignore  README.md
content/: lab2.docx
lab1/: CMakeLists.txt  input.txt
lab1/a/src/: main.cpp
lab1/b/src/: main.cpp
lab1/c/: CMakeLists.txt
lab1/c/src/: main.cpp
lab2/: CMakeLists.txt
lab2/a/: MPI_SCRIPT  gen.cpp  mpi.cpp  mpi.out.clog2  script_local  seq.cpp
lab3/: CMakeLists.txt
lab3/src/: gen.cpp  omp.cpp
lab4/: CMakeLists.txt
lab4/src/: RESULTS  SCRIPT  main.cpp
lab5/: CMakeLists.txt
